--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <nav class="navigation">
       <ul class="nav-list">
+        <li data-section="education">Education</li>
+        <li data-section="experience">Experience</li>
         <li data-section="projects">Projects</li>
         <li data-section="cv">CV</li>
         <li data-section="publications">Publications</li>
-        <li data-section="experience">Experience</li>
-        <li data-section="education">Education</li>
         <li data-section="volunteering">Clubs and Volunteering</li>
       </ul>
     </nav>
@@ -44,9 +44,10 @@
           >
         </div>
         <p class="project-description">
-          <!-- A brief description of your project that explains what it does and why
-          it's interesting. Keep this under 60 words to maintain clarity and
-          readability. -->
+          A real-time transaction anomaly detection system using Spring Boot,
+          Kafka, Python (Isolation Forest), and SQL. Accepts transaction via
+          REST API, streams to a Python ML service, and logs predictions with
+          audit-friendly traceability. Designed for risk-aware environments.
         </p>
       </div>
       <div class="project-item">
@@ -65,12 +66,15 @@
           <a
             href="https://github.com/varnan6/Social-Media-vs-Productivity-Prediction-Pipeline"
             target="_blank"
-            >Social Media v/s Productivity Prediction Notebook
+            >Social Media v/s Productivity Prediction
           </a>
         </div>
         <p class="project-description">
-          <!-- Another project description that highlights the key features and
-          contributions. Make sure to keep it concise and informative. -->
+          This project explores the relationship between social media habits and
+          actual productivity using a modular machine learning pipeline. It
+          includes data preprocessing, feature engineering, exploratory data
+          analysis, model training (Ridge & Linear Regression), hyperparameter
+          tuning with GridSearchCV, and model explainability using SHAP.
         </p>
       </div>
     </div>
@@ -97,7 +101,7 @@
     </div>
 
     <div id="experience" class="content-area">
-      <h2>Research Experience</h2>
+      <h2>Experience</h2>
       <div class="experience-item">
         <div class="position-title">Research Intern (Upcoming)</div>
         <p class="company-info">
@@ -125,9 +129,10 @@
         <p class="company-info">Ramdeobaba University, Nagpur, MH</p>
         <p class="timeline">May 2025 – Jan 2026</p>
         <p class="project-description">
-          Conducting research under Prof. Manoj Chandak on coal quality
-          prediction using CNNs; applied transfer learning achieving 72%
-          reduction in MAE for GCV prediction on a newer, >90% smaller dataset.
+          Conducting research under Prof. Manoj Chandak and Dr. Abhijeet
+          Raipurkar on coal quality prediction using CNNs. Applied transfer
+          learning achieving 72% reduction in MAE for GCV prediction on a newer,
+          >90% smaller dataset.
         </p>
       </div>
     </div>
