--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="publication-item">
         <div class="publication-title">
           Utilizing Diffusion and DETR Models for Underwater Debris Detection
-          and Recognition
+          and Recognition (under review)
         </div>
         <p class="publication-authors">Varnan A. Rathod, Khushboo Khurana</p>
       </div>
@@ -143,10 +143,18 @@
       <div class="experience-item">
         <div class="position-title">B.Tech. CSE (Honors)</div>
         <p class="company-info">
-          Shri Ramdeobaba College of Engineering and Management
+          Shri Ramdeobaba College of Engineering and Management (now RBU), Nagpur
         </p>
         <p class="timeline">2023 – 2027</p>
         <p class="project-description">CGPA: 9.25</p>
+      </div>
+      <div class="experience-item">
+        <div class="position-title">HSC (XII standard)</div>
+        <p class="company-info">
+          School of Scholars, Wanadongri, Nagpur.
+        </p>
+        <p class="timeline">2021 – 2023</p>
+        <p class="project-description">92%</p>
       </div>
     </div>
 
