--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       <div class="bio">
         <h1>Varnan Rathod</h1>
         <p>
-          Computer Science undergraduate focused on Computer Vision, Machine
-          Learning, and AI systems for real-world impact. Interested in
-          research-driven engineering and intelligent data applications.
+          Computer Science undergraduate with a strong research focus in machine learning, computer vision, and optimization. His work centers on designing and evaluating robust learning pipelines, with an emphasis on model interpretability and real-world constraints. He is particularly interested in bridging theoretical ML advances with impactful, data-driven applications.
         </p>
       </div>
     </div>
@@ -24,7 +22,7 @@
     <nav class="navigation">
       <ul class="nav-list">
         <li data-section="education">Education</li>
-        <li data-section="experience">Experience</li>
+        <li data-section="experience" class = "active">Experience</li>
         <li data-section="publications">Publications</li>
         <li data-section="cv">CV</li>
         <li data-section="contact">Contact</li>
@@ -103,7 +101,7 @@
     </div>
 
     <!-- EXPERIENCE -->
-    <div id="experience" class="content-area">
+    <div id="experience" class="content-area active">
       <h2>Experience</h2>
 
       <div class="experience-item">
